--- a/Day_1/index.html
+++ b/Day_1/index.html
@@ -17,9 +17,9 @@
         
         <h3> My daily schedule </h3>
         <p> Let me tell you how I:
-            <br>... I learn more about web dev. 
-            <br> .. I plan out my schedule. 
-            <br> .. I use resources from freeCodeCamp
+            <br>&nbsp;&nbsp;&nbsp;... I learn more about web dev. 
+            <br>&nbsp;&nbsp;&nbsp;... I plan out my schedule. 
+            <br>&nbsp;&nbsp;&nbsp;... I use resources from freeCodeCamp
          </p>
 
         <hr>
@@ -33,6 +33,9 @@
 
         <h3> Places I want to Avoid </h3>
         <p>Anywhere cold. <strong> No way! </strong></p>
+        <hr>
+
+        &lt;&lt;&lt; &copy; Adarsh &gt;&gt;&gt;
 
     </body>
 </html>
